Fixed a bug where background color and cursor style are incorrect when expanding/collapsing navigation items

--- a/src/sidenav-expanded.styl
+++ b/src/sidenav-expanded.styl
@@ -8,7 +8,7 @@
     }
 
     .sidenav-nav > .sidenav-navitem {
-        &.selected > a {
+        &.expandable > a {
             cursor: pointer;
         }
     }
